# fortress

./: .dockerignore  .env.example  .gitignore  1st step - slides.html  1st step.md  CLAUDE.md  Dockerfile  FRENCH_BUSINESS_TAXONOMY.md  README.md  STRESS_TEST_LOG.md  gemini.md  pyproject.toml  requirements.txt  run-local.sh  start.sh  stress_test.py
.githooks/: pre-push
docs/wip/: E4_BRIEF.md  E4_STATUS.md
fortress/: __init__.py  __main__.py  discovery.py  manage_users.py  maps_discovery_runner.py  models.py  runner.py  setup_users.py
fortress/api/: __init__.py  auth.py  column_mapper.py  db.py  main.py  rate_limit.py  sql_helpers.py
fortress/config/: departments.py  dept_communes.py  industry_aliases.py  naf_codes.py  naf_sector_expansion.py  sector_query_variants.py  sector_relevance.py  settings.py
fortress/database/: __init__.py  pool.py  schema.sql
fortress/docs/: UI_AGENT_HANDSHAKE.md  backend_plan.md  backend_plan_delete_cancel_rerun.md  backend_plan_maps_match_validation.md  database.md  frontend_plan.md  frontend_plan_full.md  frontend_plan_ux_review_feedback.md  frontend_prompt_login.md  pipeline.md
fortress/export/: csv.py  queries.py
fortress/frontend/: index.html  package-lock.json  package.json  vitest.config.js
fortress/matching/: budget_tracker.py  chains.py  contacts.py  entities.py  gemini.py  inpi.py  web_search.py
fortress/module_a/: __init__.py  query_interpreter.py  sirene_downloader.py  sirene_etablissement_ingester.py  sirene_ingester.py  triage.py
fortress/module_b/: contact_parser.py  entity_matcher.py  recherche_entreprises.py  web_search.py  website_crawler.py
fortress/module_c/: __init__.py  curl_client.py  playwright_maps_scraper.py
fortress/module_d/: batch_processor.py  checkpoint.py  deduplicator.py  enricher.py  seen_set.py
fortress/module_e/: card_formatter.py  export.py  master_file.py  query_file.py
fortress/processing/: batch.py  checkpoint.py  dedup.py  enricher.py
fortress/query/: __init__.py  interpreter.py  sirene_download.py  sirene_etab_ingest.py  sirene_ingest.py
fortress/scraping/: __init__.py  crawl.py  http.py  maps.py
fortress/scripts/: __init__.py  phase3_retroactive_promote.DEPRECATED.py  phase3_retroactive_promote.DEPRECATED.sql  phase3_retroactive_promote.py  phase3_retroactive_promote.sql
fortress/tests/: conftest.py  test_activity_api.py  test_api_integration.py  test_auth_api.py  (+24 more)
migrations/: 20260422_frankenstein_cleanup.sql  20260423_cp_ville_dept_backfill.sql  add_cascade_fks.sql  run_migration.py
scripts/: backfill_ban_geo.py  backfill_hosting_relinks.py  check_active_batches.py  cleanup_legacy_contacts.py  cleanup_orphan_maps.py  import_etablissements.py  import_sirene_geo.py  install_hooks.sh  qa_99pct.sh  qa_destructive_preflight.sh  qa_endpoint_sweep.py  qa_pre_push_check.sh  retrofit_d1b.py
tests/: conftest.py  test_copy_sirene_reference_data.py  test_e2e_batch.py  test_full_e2e.py  test_maps_scraper.py  test_parse_maps_address.py
tonight/: 2026-04-26-top1-phase1-maps-latlng.md  2026-04-26-top1-phase2-insee-step26.md  2026-04-26-top1-phase3-ban-backfill.md  2026-04-26-top2-cat-jur-1000-individual-matcher.md
(+94 files in other folders)
